[package]
name = "embassy-tour"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
defmt = "0.3.10"
defmt-rtt = "0.4.1"
embassy-executor = { version = "0.6.3", features = [
    "arch-cortex-m",
    "defmt", 
    "executor-thread",
    "integrated-timers"
] }
embassy-futures = { version = "0.1.1", features = ["defmt"] }
embassy-nrf = { version = "0.2.0", features = [
    "defmt", 
    "gpiote", 
    "nrf52833",
    "time",
    "time-driver-rtc1"
] }
embassy-sync = { version = "0.6.1", features = ["defmt"] }
embassy-time = { version = "0.3.2", features = ["defmt", "defmt-timestamp-uptime"] }
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
